--- a/src/sassStyles/_base.scss
+++ b/src/sassStyles/_base.scss
@@ -1,7 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300;6..12,600;6..12,800&display=swap");
-
 html {
-  font-family: "Nunito Sans", sans-serif;
+  font-family: "Nunito Sans Variable", sans-serif;
   font-size: 62.5%; // makes 1rem = 10px
 }
 
