--- a/src/components/CountryList/_CountryList.scss
+++ b/src/components/CountryList/_CountryList.scss
@@ -2,6 +2,8 @@
   display: grid;
   gap: 4rem;
 
+  width: 100%;
+
   @include mediaQuery(tablet) {
     gap: 3rem;
     grid-template-columns: repeat(2, 1fr);
